@@ -49,6 +49,10 @@ Prerelease 0.14rc2
   - Rework patch [ 120 ] (revert change to ``Table.get_column_widths()``
     that led to problems in an application with a custom table directive).
 
+* docutils/transforms/frontmatter.py
+
+  - Fix [ 320 ] Russian docinfo fields not recognized.
+
 * docutils/transforms/references.py
 
   - Don't add a second ID to problematic references.
